[package]
name = "lwip"
version = "0.1.0"
authors = ["Gregory Detal <gregory.detal@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
byteorder = "1"
bytes      = "0.5"
futures = "0.3.1"
tokio = { version = "0.2", features = [ "full" ] }
parking_lot = { version = "0.10", features = [ "deadlock_detection" ] }
transfer-async = { git = "https://github.com/gdetal/transfer-async-rs" }
pin-project-lite = "0.1.4"
ipnetwork = "0.16.0"

[build-dependencies]
cc = { version = "1.0", features = [ "parallel" ] }
bindgen = "0.52.0"

[dev-dependencies]
tun = { git = "https://github.com/gdetal/rust-tun", features = [ "async" ] }
tokio-util = { version = "0.2", features = [ "codec" ] }
tokio-test = "0.2"
packet     = { git = "https://github.com/gdetal/rust-packet" }
rusty-fork = "0.2"
criterion = "0.3"

[features]
debug = []

[[bench]]
name = "tcp_v4"
harness = false

[[bench]]
name = "tcp_v6"
harness = false
